<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/icon_perfil"
            android:title="@string/menu_perfil"
            />

        <item
            android:id="@+id/nav_reservar"
            android:icon="@drawable/icon_reserva"
            android:title="@string/menu_reservar" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/icon_historial"
            android:title="@string/menu_historial" />

        <item
            android:id="@+id/nav_promociones"
            android:icon="@drawable/icon_promociones"
            android:title="@string/menu_promociones" />


    </group>
</menu>